--- a/templated-introspect/assets/css/main.css
+++ b/templated-introspect/assets/css/main.css
@@ -3105,7 +3105,7 @@
 		left: 0;
 		line-height: 5em;
 		position: fixed;
-		text-align: left;
+		text-align: right;
 		top: 0;
 		width: 100%;
 		z-index: 10001;
@@ -3114,7 +3114,7 @@
 		#header .inner {
 			width: calc(100% - 6em);
 			margin: 0 auto;
-			position: absolute;
+			position: relative;
 		}
 		
 		.logo:hover{
@@ -3137,7 +3137,23 @@
 
 			}
 
-		
+			#header .logo {
+				font-family: 'Pacifico', cursive;
+				display: inline-block;
+				height: inherit;
+				left: 0;
+				line-height: inherit;
+				margin: 0;
+				padding: 0;
+				position: absolute;
+				top: 0;
+				color: #e5474b;
+				font-size: 1.75em;
+				text-transform: none;
+				font-weight: normal;
+				padding: 0;
+				
+			}
 
 			#header .logo:hover {
 				color: rgba(229, 71, 75, 0.75);
@@ -3216,7 +3232,7 @@
 			color: #fff;
 			display: block;
 			font-size: 16px;
-			height: 2em;
+			height: 0em;
 			left: 0.5em;
 			line-height: 2.25em;
 			position: fixed;
