--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3189,6 +3189,43 @@
 
 			}
 
+			.member_menu {
+				display: none;
+				position: absolute;
+				min-width: 160px;
+				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+				z-index: 99;
+				max-width: 80px;
+				margin-left: 30px;
+				background-color: rgb(2, 255, 255);
+			}
+			
+			
+			.member_menu a {
+				padding: 12px 16px;
+				color: white;
+				text-decoration: none;
+				display: block;
+				text-align: center;
+			}
+			
+			.member_menu_button:hover .member_menu {
+				display: block;
+				z-index: 99;
+			}
+
+			ul.menu_button {
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
+				overflow: hidden;
+				background-color:rgb(2, 255, 255);
+				top: 0;
+				
+			}
+			
+			
+
 	@media screen and (max-width: 480px) {
 
 		#header {
