--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1789,20 +1789,20 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #e5474b;
+		color:#27abdf;
 	}
 
 	blockquote {
-		border-left-color: #e5474b;
+		border-left-color: #27abdf;
 	}
 
 	code {
 		background: none;
-		border-color: #e5474b;
+		border-color: #27abdf;
 	}
 
 	hr {
-		border-bottom-color: #e5474b;
+		border-bottom-color: #27abdf;
 	}
 
 /* Box */
@@ -1827,7 +1827,7 @@
 		}
 
 	.box {
-		border-color: #e5474b;
+		border-color: #27abdf;
 	}
 
 /* Button */
@@ -1957,8 +1957,8 @@
 		button.alt,
 		.button.alt {
 			background-color: transparent;
-			box-shadow: inset 0 0 0 2px #e5474b;
-			color: #e5474b !important;
+			box-shadow: inset 0 0 0 2px #27abdf;
+			color: #27abdf !important;
 		}
 
 			input[type="submit"].alt:hover,
@@ -3221,8 +3221,8 @@
 				overflow: hidden;
 				background-color:rgb(2, 255, 255);
 				top: 0;
-				
 			}
+
 			
 			
 
@@ -3630,7 +3630,7 @@
 	#one {
 		padding: 6em 0 4em 0;
 	}
-	    background-image: url("../../images/HLK\ Tech\ Club.jpg");
+	    
 		@media screen and (max-width: 980px) {
 
 			#one {
@@ -3791,7 +3791,7 @@
 /* Footer */
 
 	#footer {
-		background-color: #e5474b;
+		background-color: #27abdf;
 		color: #f2a3a5;
 		padding: 4em 0 2em 0;
 		background: #e5474b;
