--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2663,7 +2663,7 @@
 		}
 
 		.wrapper.style1 {
-			background-color: #e5474b;
+			background-color: #27abdf;
 			color: #f2a3a5;
 		}
 
@@ -3011,8 +3011,8 @@
 
 			.wrapper.style2 input[type="checkbox"]:checked + label:before,
 			.wrapper.style2 input[type="radio"]:checked + label:before {
-				background-color: #e5474b;
-				border-color: #e5474b;
+				background-color: #27abdf;
+				border-color: #27abdf;
 				color: #ffffff;
 			}
 
@@ -3409,8 +3409,8 @@
 /* Banner */
 
 	#banner {
-		background-color: #e5474b;
-		color: #f2a3a5;
+		background-color:#27abdf;
+		color: #27abdf;
 		padding: 13em 0 11em 0;
 		background-color: #0c0c0c;
 		background-image: url("../../images/HLK\ Tech\ Club.jpg");
@@ -3516,7 +3516,7 @@
 			#banner button.special,
 			#banner .button.special {
 				background-color: #ffffff;
-				color: #e5474b !important;
+				color: #27abdf !important;
 			}
 
 		#banner:after {
