--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1589,7 +1589,7 @@
 	}
 
 	body, input, select, textarea {
-		font-family: "Lato", sans-serif;
+		font-family: Arial, Helvetica, sans-serif;
 		font-size: 15pt;
 		font-weight: 300;
 		line-height: 2;
